Bug 29122 - cairo_copy_clip_rectangle_list returns surface extents instead of an empty clip when clip is empty
Summary: cairo_copy_clip_rectangle_list returns surface extents instead of an empty cl...
Status: RESOLVED FIXED
Alias: None
Product: cairo
Classification: Unclassified
Component: general (show other bugs)
Version: 1.9.13
Hardware: Other All
: medium normal
Assignee: Karl Tomlinson
QA Contact: cairo-bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: 29120
  Show dependency treegraph
 
Reported: 2010-07-16 15:42 UTC by Karl Tomlinson
Modified: 2010-07-17 03:34 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
patch (773 bytes, patch)
2010-07-16 15:44 UTC, Karl Tomlinson
Details | Splinter Review

Description Karl Tomlinson 2010-07-16 15:42:04 UTC
With bug 29121 fixed, cat get-clip.log

  Error: All clipped out; expected 0 rectangles, got 1

If _cairo_clip_copy_rectangle_list() is passed a clip with all_clipped set (and
path NULL), then it returns the gstate target extents instead of an empty clip
rectangle list.

The regression was missed due to bug 29120.
I'm guessing
http://cgit.freedesktop.org/cairo/commit/?id=bed2701e1c89095878d549cbca8f22d84f3dda3c
Comment 1 Karl Tomlinson 2010-07-16 15:44:08 UTC
Created attachment 37141 [details] [review]
patch
Comment 2 Chris Wilson 2010-07-17 03:34:30 UTC
commit f2fa15680ec3ac95cb68d4957557f06561a7dc55
Author: Karl Tomlinson <karlt+@karlt.net>
Date:   Sat Jul 17 10:39:50 2010 +1200

    clip: return empty clip from _cairo_clip_copy_rectangle_list when all_clipped
    
    Fixes https://bugs.freedesktop.org/show_bug.cgi?id=29122
    Tested by test/get-clip
    
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.