clip: return empty clip from _cairo_clip_copy_rectangle_list when all_clipped

Fixes https://bugs.freedesktop.org/show_bug.cgi?id=29122
Tested by test/get-clip

Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>